cmake_minimum_required(VERSION 3.21)
project(contest1_sorting_algorithms)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(lists_by_classes A.cpp)
add_executable(stylish_clothes B.cpp)
add_executable(merge_sort C.cpp)
add_executable(form_a_palindrome D.cpp)
add_executable(selection_sort E.cpp)
add_executable(counting_sort F.cpp)
add_executable(buckets G.cpp)
add_executable(ratio_sort H.cpp)
add_executable(max_heap I.cpp)
add_executable(com_calculator J.cpp)
add_executable(heap_sort K.cpp)
add_executable(irregular_sort L.cpp)
